# loki-dataforge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deploy-loki-dataforge.sh
.github/workflows/: beta_release.yml  e2e.yml  release.yml  rust_ci.yml  tauri_build.yml
apps/desktop/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/playwright-report/: index.html
apps/desktop/src/: App.tsx  VirtualHealerUI.tsx  index.css  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: InputSelector.tsx  NetworkDiskWizard.tsx  QuicSwarmDashboard.tsx
apps/desktop/src/components/ui/: button.tsx  card.tsx  tabs.tsx
apps/desktop/src/lib/: api.ts
apps/desktop/src/test/: App.test.tsx  selectors.ts  setup.ts
apps/desktop/test/e2e/: app.spec.ts
crates/loki-data-forge-cli/: Cargo.toml
crates/loki-data-forge-cli/src/: commands.rs  lib.rs
crates/loki-data-forge-core/: Cargo.toml
crates/loki-data-forge-core/data/: signatures.json
crates/loki-data-forge-core/src/: adapters.rs  carver.rs  classifier.rs  encryption.rs  error.rs  filesystem.rs  identity.rs  lib.rs  markov_chains.wgsl  models.rs  os_disks.rs  progress.rs  quick_scan.rs  raid.rs  raid_gf28.wgsl  raid_reconstruct.rs  recovery.rs  scan.rs  signatures.rs  synology.rs  telemetry.rs  validators.rs  virtual_healer.rs  virtual_mount.rs  vmm_windows.rs  wgpu_distributed.rs  wgpu_markov.rs  wgpu_math.rs
crates/loki-data-forge-core/src/io/: direct_reader.rs  mod.rs
crates/loki-data-forge-core/src/network/: af_xdp.rs  disk_scraper.rs  mod.rs  quic_swarm.rs
crates/loki-data-forge-core/src/parsers/: mod.rs  ntfs.rs  raid_metadata.rs  vpk.rs
crates/loki-data-forge-core/tests/: af_xdp_bridging_tests.rs  engine_tests.rs  quic_extraction_tests.rs  raid_reconstruction_tests.rs  simd_filesystem_tests.rs  stabilization_regressions.rs  synology_and_raid_tests.rs  vmdk_scraper_tests.rs
crates/loki-data-forge-gui/: Cargo.toml
crates/loki-data-forge-gui/src/: lib.rs
crates/loki-data-forge-gui/src/ui/: mod.rs  tauri_commands.rs
docs/: AI_Readme.md  Assets.md  Headless_Deployment.md  Hypervisor_Injection.md  Implementation.md  Issues_Backend.md  Issues_GUI.md  Lessons_Learned.md  Phase_5_Architecture.md  Project_State.md  Ransomware_Healing.md  Recommendations.md  Testing.md
scripts/: launch_gui.sh
