[workspace]
members = [
  "crates/loki-data-forge-core",
  "crates/loki-data-forge-cli",
  "crates/loki-data-forge-gui",
  "apps/desktop/src-tauri"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Loki Data Forge Contributors"]
license = "MIT"
repository = "https://github.com/loki-data-forge/loki-data-forge"
homepage = "https://github.com/loki-data-forge/loki-data-forge"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
futures = "0.3"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
memmap2 = "0.9"
ntfs = "0.4"
once_cell = "1.20"
parking_lot = "0.12"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
same-file = "1.0"
sha2 = "0.10"
smallvec = "1.13"
smart-default = "0.7"
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate", "bzip2", "lzma"] }
ext4 = "0.9"
uuid = { version = "1.13", features = ["v4", "v5", "serde"] }
tauri = { version = "2", default-features = false, features = ["wry"] }
tauri-build = { version = "2" }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
regex = "1.11"
