[package]
name = "loki-data-forge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
portable_simd = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
wgpu.workspace = true
ext4.workspace = true
hex.workspace = true
memmap2.workspace = true
ntfs.workspace = true
once_cell.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
same-file.workspace = true
sha2.workspace = true
smallvec.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true
zip.workspace = true
bincode = "1.3.3"

[dev-dependencies]
anyhow.workspace = true
tempfile = "3.17"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
