[package]
name = "loki-data-forge-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = []
tauri = ["dep:tauri", "dep:tauri-plugin-fs", "dep:tauri-plugin-dialog"]

[dependencies]
loki-data-forge-core = { path = "../loki-data-forge-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tauri = { workspace = true, optional = true }
tauri-plugin-fs = { workspace = true, optional = true }
tauri-plugin-dialog = { workspace = true, optional = true }
